Added the City model, Validation of show time and Created the files for booking data

--- a/app/views/cinemas/_form.html.erb
+++ b/app/views/cinemas/_form.html.erb
@@ -9,6 +9,11 @@
     <%= f.label :address %>
     <%= f.text_field :address %>
   </div><br>
+
+  <div>
+    <%= f.label :city_id, "City" %>
+    <%= f.select :city_id, City.all.map{|c| [c.name, c.id]} %>
+  </div><br>
   
   <div>
     <%= f.submit %>
