--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -1,22 +1,17 @@
 
-<table>
+<table class="table">
   <thead>
     <th>Name</th>
     <th>Address</th>
-    <th>Show Time<th>
   </thead>
   <tbody>
     <% @cinemas.each do |cinema| %>
       <tr>
-        <td><%= cinema.name %> </td>
+        <td><%= link_to movies_path(cinema_id: cinema.id) do %>
+          <%= cinema.name %> 
+          <% end %>
+        </td>
         <td><%= cinema.address %></td>
-        <% cinema.shows.each do |show| %>
-          <td>
-            <%= link_to new_booking_path(screen_id: show.screen.id, show_id: show.id) do %>
-              <%= show.show_start_time.strftime("%H:%M") %>
-            <% end %>
-          </td>
-        <% end %>
       </tr>
     <% end %>
   </tbody>
