--- a/app/views/cinemas/show.html.erb
+++ b/app/views/cinemas/show.html.erb
@@ -1,7 +1,7 @@
 
 <%= link_to "Back", cinemas_path %>
 <h1>Cinema</h1>
-<table>
+<table class="table">
   <thead>
     <th>Name</th>
     <th>Address</th>
