--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,7 +1,7 @@
 
 <%= link_to "Back", shows_path %>
 <h1>Show</h1>
-<table>
+<table class="table">
   <thead>
     <th>Show Start Time</th>
     <th>Start End Time</th>
