--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -10,11 +10,12 @@
     <%= f.label :user, "User" %>
     <%= f.select :user_id, User.all.map{|u| [u.email, u.id]} %>
   </div><br>
-
+  
   <div>
     <%= f.collection_check_boxes(:seat_ids, @screen.seats, :id, :seat_number) do |seat| %>
+      <% seat_booked = @booked_seats.include?(seat.object.id) %>
       <%= seat.label id: "selected_seats" do %>
-        <%= seat.check_box(checked: @booked_seats.include?(seat.object.id)) + seat.text %>
+        <%= seat.check_box(checked: seat_booked, disabled: seat_booked ) + seat.text %>
       <% end %>
     <% end %>
   </div><br>
