--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -5,7 +5,9 @@
     <th>Screen Name</th>
     <th>Total Seats</th>
     <th>Cinema Name</th>
-    <th>Action </th>
+    <% if admin_signed_in? %>
+      <th>Action </th>
+    <% end %>
   </thead>
   <tbody>
     <% @screens.each do |screen| %>
@@ -16,11 +18,14 @@
         </td>
         <td><%= screen.total_seats %></td>
         <td><%= screen.cinema.name %></td>
-        <td><%= link_to "Edit", edit_screen_path(screen) %></td>
-        <td><%= link_to "Delete", screen_path(screen), method: :delete, data: { confirm: "Are you sure..?"}%>
+        <% if admin_signed_in? %>
+          <td><%= link_to "Edit", edit_screen_path(screen) %></td>
+          <td><%= link_to "Delete", screen_path(screen), method: :delete, data: { confirm: "Are you sure..?"}%>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table><br><br>
-
-<h3><%= link_to "New Screen", new_screen_path%></h3>
+<% if admin_signed_in? %>
+  <h3><%= link_to "New Screen", new_screen_path%></h3>
+<% end %>
