--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -8,7 +8,9 @@
     <th>Screen</th>
     <th>Movie</th>
     <th>Cinema</th>
-    <th>Action</th>
+    <% if admin_signed_in? %>
+      <th>Action</th>
+    <% end %>
   </thead>
   <tbody>
     <% @shows.each do |show| %>
@@ -20,11 +22,14 @@
         <td><%= show.movie.name %></td>
         <td><%= show.cinema.name %></td>
         <td><%= link_to "Show", show_path(show) %></td>
-        <td><%= link_to "Edit", edit_show_path(show) %></td>
-        <td><%= link_to "Delete", show_path(show), method: :delete, data: { confirm: "Are you sure..?"}%>
+        <% if admin_signed_in? %>
+          <td><%= link_to "Edit", edit_show_path(show) %></td>
+          <td><%= link_to "Delete", show_path(show), method: :delete, data: { confirm: "Are you sure..?"}%>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table><br><br>
-
-<h3><%= link_to "New show", new_show_path%></h3>
+<% if admin_signed_in? %>
+ <h3><%= link_to "New show", new_show_path%></h3>
+<% end %>
