Added the page controller and other changes

--- a/app/views/bookings/generate_ticket.html.erb
+++ b/app/views/bookings/generate_ticket.html.erb
@@ -1,5 +1,6 @@
 <h1 class="text-center">Booking</h1>
 <p class="fs-4">User: <%= @booking.user.email %></p>
+<p class="fs-4">City: <%= @booking.show.cinema.city.name %></p>
 <p class="fs-4">Show Time: <%= @booking.show.show_start_time.strftime("%H:%M") %></p>
 <p class="fs-4">Cinema Name: <%= @booking.show.cinema.name %></p>
 <p class="fs-4">Movie: <%= @booking.show.movie.name %></p>
